# claidex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MODAL_EXECUTION_GUIDE.md  README.md  docker-compose.yml  gemini.md  package-lock.json  render.yaml  verify_credentials.py
etl/: __init__.py  export_for_neo4j.py  pyproject.toml  requirements.txt  seed_data.sql
etl/compute/: MODAL_IMPLEMENTATION_SUMMARY.md  MODAL_SETUP.md  QUICKSTART_MODAL.md  __init__.py  claidex_modal.py  prepare_modal_data.py  requirements-modal.txt  risk_scores.py  test_risk_scores.py  validate_modal_results.py
etl/ingest/: __init__.py  chow_ingest.py  fec_ingest.py  fix_medicaid_year.py  hcris_ingest.py  leie.py  leie_ingest.py  medicaid_puf.py  medicaid_puf_ingest.py  medicare_inpatient_ingest.py  medicare_part_d_ingest.py  medicare_physician.py  medicare_physician_ingest.py  nppes.py  nppes_ingest.py  opencorporates.py  order_referring_ingest.py  snf_ownership.py  snf_ownership_ingest.py
etl/load/: __init__.py  neo4j_loader.py  postgres_loader.py
etl/schemas/: README.md  api_keys.sql  chow.sql  entities.sql  exclusions.sql  fec_committees.sql  fec_contributions.sql  hcris.sql  medicare_inpatient.sql  medicare_part_d.sql  order_referring.sql  organization_members.sql  organizations.sql  ownership_snf.sql  payments.sql  payments_combined_v.sql  providers.sql  risk_scores.sql  user_notification_preferences.sql  user_security_log.sql  users.sql  watchlist.sql  watchlists.sql
etl/transform/: __init__.py  address_normalizer.py  entity_resolution.py  (+5 more)
(+237 files in other folders)
